# libimousepp

./: .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md
cmake/: imouse++Config.cmake.in
src/: client.cpp  client.hpp
src/dto/: api_request_dto.cpp  api_request_dto.hpp  api_response_dto.cpp  api_response_dto.hpp  device_dto.cpp  device_dto.hpp  device_id_dto.cpp  device_id_dto.hpp  group_dto.cpp  group_dto.hpp  start_streaming_inner_dto.cpp  start_streaming_inner_dto.hpp  stop_streaming_inner_dto.cpp  stop_streaming_inner_dto.hpp
